newtype-tools/tests/trybuild/ops/shl.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/shl.rs:5:19
  |
5 |     #[newtype(shl())]
  |                   ^

error: expected `,`
  --> tests/trybuild/ops/shl.rs:11:22
   |
11 |     #[newtype(shl(u64))]
   |                      ^

error: unexpected end of input, expected `output`
  --> tests/trybuild/ops/shl.rs:17:23
   |
17 |     #[newtype(shl(u64,))]
   |                       ^

error: expected `=`
  --> tests/trybuild/ops/shl.rs:23:30
   |
23 |     #[newtype(shl(u64, output))]
   |                              ^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/trybuild/ops/shl.rs:29:32
   |
29 |     #[newtype(shl(u64, output =))]
   |                                ^

error: expected `,`
  --> tests/trybuild/ops/shl.rs:35:36
   |
35 |     #[newtype(shl(u64, output = u64))]
   |                                    ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/shl.rs:41:37
   |
41 |     #[newtype(shl(u64, output = u64,))]
   |                                     ^

error: expected `=`
  --> tests/trybuild/ops/shl.rs:47:42
   |
47 |     #[newtype(shl(u64, output = u64, with))]
   |                                          ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/shl.rs:53:44
   |
53 |     #[newtype(shl(u64, output = u64, with =))]
   |                                            ^
